samples/task/valid/R29.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choicetable><chhead><choptionhd>Opt</choptionhd><chdeschd>Desc</chdeschd></chhead><chrow><choption>Option A</choption><chdesc><p>Description for A</p></chdesc></chrow></choicetable></step></steps>
  </taskbody>
</task>