samples/task/invalid/R39.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choicetable><chhead><choptionhd>Opt</choptionhd><chdeschd>Desc</chdeschd></chhead><chrow><chdesc><p>D1</p></chdesc><choption>O1</choption></chrow></choicetable></step></steps>
  </taskbody>
</task>